--- a/Clase 05 - NPM/package.json
+++ b/Clase 05 - NPM/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "clase-04---manejo-de-archivos",
+  "name": "clase-05---npm",
   "version": "1.0.0",
   "description": "",
-  "main": "fsCallback.js",
+  "main": "UsersManager.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "moment": "^2.29.4"
+  }
 }
