--- a/Clase 18 - Cookies y Session/package.json
+++ b/Clase 18 - Cookies y Session/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"cookie-parser": "^1.4.6",
 		"express": "^4.18.2",
-		"express-handlebars": "^7.0.7"
+		"express-handlebars": "^7.0.7",
+		"express-session": "^1.17.3"
 	}
 }
