--- a/Clase 21 - JWT/package.json
+++ b/Clase 21 - JWT/package.json
@@ -1,9 +1,9 @@
 {
-	"name": "clase-19---storage",
+	"name": "clase-21---jwt",
 	"version": "1.0.0",
 	"description": "",
-	"type": "module",
 	"main": "index.js",
+	"type": "module",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
@@ -11,14 +11,13 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"bcrypt": "^5.1.0",
 		"connect-mongo": "^5.0.0",
-		"cookie-parser": "^1.4.6",
 		"express": "^4.18.2",
 		"express-handlebars": "^7.0.7",
 		"express-session": "^1.17.3",
-		"mongoose": "^7.2.4",
+		"jsonwebtoken": "^9.0.0",
+		"mongoose": "^7.3.1",
 		"passport": "^0.6.0",
-		"passport-local": "^1.0.0"
+		"passport-github2": "^0.1.12"
 	}
 }
