--- a/Clase 23 -Router Avanzado/package.json
+++ b/Clase 23 -Router Avanzado/package.json
@@ -11,6 +11,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"express": "^4.18.2"
+		"express": "^4.18.2",
+		"jsonwebtoken": "^9.0.0"
 	}
 }
