--- a/Clase 36 - Contenedores/package.json
+++ b/Clase 36 - Contenedores/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "mongoose": "^6.7.3"
