--- a/Clase 37 - 3 Practica Integradora/package.json
+++ b/Clase 37 - 3 Practica Integradora/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "jsonwebtoken": "^8.5.1",
