--- a/AfterClass 10 - Mailing y Cluster/package.json
+++ b/AfterClass 10 - Mailing y Cluster/package.json
@@ -20,6 +20,7 @@
     "express-handlebars": "^6.0.6",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.4",
+    "nodemailer": "^6.9.4",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
   }
