--- a/AfterClass 10 - Mailing y Cluster/package.json
+++ b/AfterClass 10 - Mailing y Cluster/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^6.4.4",
     "nodemailer": "^6.9.4",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "winston": "^3.10.0"
   }
 }
