--- a/Clase 44 - 4 Practica Integradora/package.json
+++ b/Clase 44 - 4 Practica Integradora/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.4",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "winston": "^3.10.0"
   }
 }
